@@ -44,15 +44,15 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
 
     public GetUserPrivilegesResponse(StreamInput in) throws IOException {
         super(in);
-        cluster = Collections.unmodifiableSet(in.readSet(StreamInput::readString));
-        configurableClusterPrivileges = Collections.unmodifiableSet(in.readSet(ConfigurableClusterPrivileges.READER));
-        index = Collections.unmodifiableSet(in.readSet(Indices::new));
-        application = Collections.unmodifiableSet(in.readSet(RoleDescriptor.ApplicationResourcePrivileges::new));
-        runAs = Collections.unmodifiableSet(in.readSet(StreamInput::readString));
+        cluster = in.readImmutableSet(StreamInput::readString);
+        configurableClusterPrivileges = in.readImmutableSet(ConfigurableClusterPrivileges.READER);
+        index = in.readImmutableSet(Indices::new);
+        application = in.readImmutableSet(RoleDescriptor.ApplicationResourcePrivileges::new);
+        runAs = in.readImmutableSet(StreamInput::readString);
         if (in.getTransportVersion().onOrAfter(TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS)) {
-            remoteIndex = Collections.unmodifiableSet(in.readSet(RemoteIndices::new));
+            remoteIndex = in.readImmutableSet(RemoteIndices::new);
         } else {
-            remoteIndex = Collections.emptySet();
+            remoteIndex = Set.of();
         }
     }
 
@@ -193,12 +193,12 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
             // The use of TreeSet is to provide a consistent order that can be relied upon in tests
             indices = Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString)));
             privileges = Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString)));
-            fieldSecurity = Collections.unmodifiableSet(in.readSet(input -> {
+            fieldSecurity = in.readImmutableSet(input -> {
                 final String[] grant = input.readOptionalStringArray();
                 final String[] exclude = input.readOptionalStringArray();
                 return new FieldPermissionsDefinition.FieldGrantExcludeGroup(grant, exclude);
-            }));
-            queries = Collections.unmodifiableSet(in.readSet(StreamInput::readBytesReference));
+            });
+            queries = in.readImmutableSet(StreamInput::readBytesReference);
             this.allowRestrictedIndices = in.readBoolean();
         }
 
